--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
         </section>
 
-      <section class="reservation">
+     <section class="reservation" id="reservation">
   <h2 class="reservation__title">Reserva una mesa</h2>
  <form class="reservation__form">
   <label class="reservation__label">
