--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
      <section class="reservation" id="reservation">
   <h2 class="reservation__title">Reserva una mesa</h2>
- <form class="reservation__form">
+ <form class="reservation__form form">
   <label class="reservation__label">
     Nombre *
     <input type="text" class="reservation__input" placeholder="Nombre" required />
@@ -116,9 +116,9 @@
 
   <label class="reservation__label">
     Número de comensales *
-    <select class="reservation__input" required>
-      <option value="">1-8</option>
-    </select>
+    <input class="reservation__input" name="number"min="1" max="8" placeholder="1-8" required> 
+      
+    </input>
   </label>
 
   <label class="reservation__label">
