--- a/index.html
+++ b/index.html
@@ -142,12 +142,42 @@
 
         </section>
       </main>
+ <footer class="footer" id="footer">
+        <div class="footer__content">
+          <div class="footer__circle"></div>
+          <img
+            src="./images/logo_coffeeshop_light.svg"
+            alt="logo_coffeeshop_light"
+            class="footer__logo"
+          />
+          <div class="footer__social footer__social_content_social">
+            <h3 class="footer__social-heading">Redes sociales</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link"
+                  ><img
+                    src="./images/facebook_white.svg"
+                    alt="facebook_white"
+                    class="footer__social-icon"
+                  />Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link"
+                  ><img
+                    src="./images/instagram_white.svg"
+                    alt="instagram_white"
+                    class="footer__social-icon"
+                  />Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
+          </div>
 
       <footer class="footer" id="footer">
         <p class="paragraph">© 2025 Anderson Snayder Cortez</p>
-        <div class="footer__links">
-          <a class="footer__link" href="#">Facebook</a>
-          <a class="footer__link" href="#">Instagram</a>
+      
         </div>
       </footer>
     </div>
