--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
           </div>
 
-        <p class="paragraph">© 2025 Anderson Snayder Cortez</p>
+      <p class="footer__copyright">© 2025 Anderson Snayder Cortez</p>
       
         </div>
       </footer>
